Trained a purposefully overfit model to test training procedure

--- a/data/datasetOverfit.yaml
+++ b/data/datasetOverfit.yaml
@@ -1,7 +1,7 @@
-path: data
-train: trainOverfit
-val: trainOverfit
-test: trainOverfit
+path: ../data
+train: trainOverfit.txt
+val: trainOverfit.txt
+test: trainOverfit.txt
 
 names:
   0: Evechinus chloroticus
