--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
 venv/
 data/images/
+data/images_v2/
+data/images_v3/
+data/labels/
+data/labels_v2/
+data/labels_v3/
 yolov5/
 *.cache
+*.npy
 *.pt
 !models/**
 *.pyc
