--- a/squidle/urchin_detector_bot/requirements.txt
+++ b/squidle/urchin_detector_bot/requirements.txt
@@ -1,49 +1,42 @@
-# YOLOv5 requirements
-# Usage: pip install -r requirements.txt
-
-# Base ------------------------------------------------------------------------
-gitpython>=3.1.30
-matplotlib>=3.3
-numpy>=1.22.2
-opencv-python>=4.1.1
-Pillow>=10.0.1
-psutil  # system resources
-PyYAML>=5.3.1
-requests>=2.23.0
-scipy>=1.4.1
-thop>=0.1.1  # FLOPs computation
-torch>=1.8.0  # see https://pytorch.org/get-started/locally (recommended)
-torchvision>=0.9.0
-tqdm>=4.64.0
-ultralytics>=8.0.147
-# protobuf<=3.20.1  # https://github.com/ultralytics/yolov5/issues/8012
-
-# Logging ---------------------------------------------------------------------
-# tensorboard>=2.4.1
-# clearml>=1.2.0
-# comet
-
-# Plotting --------------------------------------------------------------------
-pandas>=1.1.4
-seaborn>=0.11.0
-
-# Export ----------------------------------------------------------------------
-# coremltools>=6.0  # CoreML export
-# onnx>=1.10.0  # ONNX export
-# onnx-simplifier>=0.4.1  # ONNX simplifier
-# nvidia-pyindex  # TensorRT export
-# nvidia-tensorrt  # TensorRT export
-# scikit-learn<=1.1.2  # CoreML quantization
-# tensorflow>=2.4.0  # TF exports (-cpu, -aarch64, -macos)
-# tensorflowjs>=3.9.0  # TF.js export
-# openvino-dev>=2023.0  # OpenVINO export
-
-# Deploy ----------------------------------------------------------------------
-setuptools>=65.5.1 # Snyk vulnerability fix
-# tritonclient[all]~=2.24.0
-
-# Extras ----------------------------------------------------------------------
-# ipython  # interactive notebook
-# mss  # screenshots
-# albumentations>=1.0.3
-# pycocotools>=2.0.6  # COCO mAP
+certifi==2022.12.7
+charset-normalizer==2.1.1
+colorama==0.4.6
+contourpy==1.2.0
+cycler==0.12.1
+filelock==3.9.0
+fonttools==4.48.1
+fsspec==2023.4.0
+gitdb==4.0.11
+GitPython==3.1.41
+idna==3.4
+Jinja2==3.1.2
+kiwisolver==1.4.5
+MarkupSafe==2.1.3
+matplotlib==3.8.2
+mpmath==1.3.0
+networkx==3.2.1
+numpy==1.26.3
+opencv-python==4.9.0.80
+packaging==23.2
+pandas==2.2.0
+pillow==10.2.0
+psutil==5.9.8
+py-cpuinfo==9.0.0
+pyparsing==3.1.1
+python-dateutil==2.8.2
+pytz==2024.1
+PyYAML==6.0.1
+requests==2.28.1
+scipy==1.12.0
+seaborn==0.13.2
+six==1.16.0
+smmap==5.0.1
+sympy==1.12
+thop==0.1.1.post2209072238
+torch==2.2.0+cu118
+torchvision==0.17.0+cu118
+tqdm==4.66.1
+typing_extensions==4.8.0
+tzdata==2023.4
+ultralytics==8.1.11
+urllib3==1.26.13
