--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,8 @@
 venv/
 data/images/
-data/images_v2/
-data/images_v3/
-data/images_old_v3/
-data/enhanced_images/
+data/images_*
 data/labels/
-data/labels_v2/
-data/labels_v3/
-data/labels_v4/
-data/labels_old_v3/
-data/labels_v4/
+data/labels_*
 yolov5/
 *.cache
 *.npy
