--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Urchin-Detector"]
-	path = Urchin-Detector
-	url = https://github.com/kraw084/Urchin-Detector
+[submodule "yolov5"]
+	path = yolov5
+	url = https://github.com/kraw084/yolov5
